# N-gram_words-prediction

./: CMakeLists.txt  README.md  main.cpp  memory_usage.cpp  memory_usage.hpp  ngrams.db  reduce_n_gram.cpp  result_without_words.txt  results.md
.github/workflows/: cmake.yml
api/: ngram_api.py
data/dataset/1/: your-god-is-too-small-50-essays-on-life-love-and-liberty-wit.epub.txt  youve-got-to-be-kidding-lord-you-want-me-to-tell-who-about-y.epub.txt
data/dataset/2/: test1.txt  your-father-knows-best.epub.txt
database/: database.cpp  database.hpp  exception.hpp
db_manager/: db_manager.cpp  db_manager.hpp
ngram_predictor/: ngram_predictor.cpp  ngram_predictor.hpp  ngram_predictor_read.cpp  perplexity.cpp  perplexity.h  perplexity.hpp  reduce_n_gram.cpp  reduce_n_gram.h  reduce_n_gram.hpp  smoothing.cpp  smoothing.h  time_measurements.hpp
predict_dir/: predict.cpp  predict.h
react-app/: package-lock.json
react-app/src/: App.js
src/: ts_queue.hpp
train_dir/: train.cpp  train.h
